# RoboMaster_Training_Homework

./: README.md
work1/: env_test.cpp
work1/task1/: README.md
work1/task1/code/: CMakeLists.txt  CMakePresets.json
work1/task1/code/include/: matrix.hpp
work1/task1/code/src/: basic_matrix_ops.cpp  matrix.cpp  shift_rotate.cpp
work1/task2/: OpenCV安装.md  README.md
work1/task2/code/: CMakeLists.txt  CMakePresets.json
work1/task2/code/include/: ArmorDetector.hpp  ImageProcessor.hpp
work1/task2/code/src/: ArmorDetector.cpp  ImageProcessor.cpp  detector.cpp  segmentation.cpp
work1/task3/: README.md
work1/task3/code/: CMakeLists.txt  CMakePresets.json
work1/task3/code/include/: ArmorSim.hpp
work1/task3/code/src/: ArmorSim.cpp  KaimanFilter.cpp  simulate.cpp
work1/task3/code/运行结果/: 基础任务-装甲板运动模拟.txt
work1/task4/: README.md
work1/task4/code/: data_creater.py  env_test.py  models.py  nn_test.py  nn_train.py
work1/task4/code/logs_train/: events.out.tfevents.1759332720.Daisuki.64492.0
work1/task5/: README.md
work1/task5/code/: Q_learning.py  训练终端输出结果
